sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:4: error: ';' expected but ',' found.
    var swapped= false,
                      ^